A lot more additions

--- a/rebar.config
+++ b/rebar.config
@@ -1,20 +1,28 @@
-{erl_opts, [debug_info]}.
-{deps, []}.
+{erl_opts, [debug_info, {parse_transform, lager_transform}]}.
+{deps,
+  [
+   fifo_utils,
+   jsx,
+   {libsniffle, ".*", {git, "http://github.com/project-fifo/libsniffle.git", {branch, "test"}}}
+  ]}.
 
-{relx, [{release, {'fifo-zlogin', "0.1.0"},
-         ['fifo-zlogin',
-          sasl]},
+{relx,
+ [{release, {'fifo_zlogin', "0.1.0"},
+   ['fifo_zlogin',
+    sasl]},
 
-        {sys_config, "./config/sys.config"},
-        {vm_args, "./config/vm.args"},
+  {sys_config, "./config/sys.config"},
+  {vm_args, "./config/vm.args"},
+  {dev_mode, true},
+  {include_erts, false},
 
-        {dev_mode, true},
-        {include_erts, false},
+  {extended_start_script, true},
+  {overlay,
+   [{copy, "rel/files/fifo_zlogin", "bin/fifo_zlogin"}]}
+ ]}.
 
-        {extended_start_script, true}]
-}.
-
-{profiles, [{prod, [{relx, [{dev_mode, false},
-                            {include_erts, true}]}]
-            }]
+{profiles,
+ [{prod, [{relx, [{dev_mode, false},
+                  {include_erts, true}]}]
+  }]
 }.
