Fixed unused exports

--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,7 @@ _plugins
 _tdeps
 logs
 _build
+rel/files/fifo_zlogin.version
+apps/fifo_zlogin/priv/runpty
+apps/fifo_zlogin/src/fifo_zlogin_version.hrl
+fifo_zlogin.version
