add share folder to releasE

--- a/rebar.config
+++ b/rebar.config
@@ -18,7 +18,10 @@
 
   {extended_start_script, true},
   {overlay,
-   [{copy, "rel/files/fifo_zlogin", "bin/fifo_zlogin"}]}
+   [
+    {copy, "rel/files/fifo_zlogin", "bin/fifo_zlogin"},
+    {copy, "share", "share"}
+   ]}
  ]}.
 
 {profiles,
