--- a/rebar.config
+++ b/rebar.config
@@ -3,7 +3,7 @@
   [
    fifo_utils,
    jsx,
-   {libsniffle, ".*", {git, "https://github.com/project-fifo/libsniffle.git", {branch, "test"}}}
+   {libsniffle, ".*", {git, "https://github.com/project-fifo/libsniffle.git", {tag, "0.3.32"}}}
   ]}.
 
 {relx,
