--- a/rebar.config
+++ b/rebar.config
@@ -15,11 +15,7 @@
   {dev_mode, true},
   {include_erts, false},
 
-  {extended_start_script, true},
-  {overlay,
-   [
-    {copy, "share", "share"}
-   ]}
+  {extended_start_script, true}
  ]}.
 
 {profiles,
