Update for new relase code

--- a/rebar.config
+++ b/rebar.config
@@ -6,7 +6,7 @@
  ]}.
 
 {relx,
- [{release, {fifo_zlogin, "0.9.2"},
+ [{release, {fifo_zlogin, "0.9.3"},
    ['fifo_zlogin',
     sasl]},
 
@@ -19,8 +19,12 @@
  ]}.
 
 {profiles,
- [{prod, [{relx, [{dev_mode, false},
+ [{darwin, [{relx, [{dev_mode, false},
                   {include_erts, true}]}]},
-  {lint,  [{plugins, [{rebar3_lint, {git, "https://github.com/project-fifo/rebar3_lint.git", {tag, "0.1.4"}}}]}]}
+  {smartos, [{relx, [{dev_mode, false},
+                  {include_erts, true}]}]},
+  {freebsd, [{relx, [{dev_mode, false},
+                  {include_erts, true}]}]},
+  {lint,  [{plugins, [rebar3_lint]}]}
  ]
 }.
