--- a/rel/pkgng/Makefile
+++ b/rel/pkgng/Makefile
@@ -1,11 +1,11 @@
-VERSION=0.9.2
-COMPONENT_INTERNAL=fifo_zlogin
 INSTALL_DIR=usr
 DEPS="coreutils" "sudo"
+REBARPROFILE ?= default
 
-include pkgng.mk
+include ../../config.mk
+include ../../_build/${REBARPROFILE}/lib/fifo_utils/priv/pkgng.mk
 
-.PHONY: package prepare clean
+.PHONY: prepare 
 
 prepare:
 	-rm -r $(STAGE_DIR)
@@ -14,16 +14,3 @@ prepare:
 	rm -rf $(STAGE_DIR)/$(INSTALL_DIR)/lib/*/c_src
 	mkdir -p $(STAGE_DIR)/etc/rc.d
 	cp ../freebsd/zlogin $(STAGE_DIR)/etc/rc.d/
-
-package: prepare dep_list package_list
-	cat +MANIFEST deplist > $(STAGE_DIR)/+MANIFEST
-	cp plist $(STAGE_DIR)/
-	cp +POST_INSTALL $(STAGE_DIR)/
-	pkg create -m $(STAGE_DIR)/ -r $(STAGE_DIR)  -o .
-#-p $(STAGE_DIR)/plist
-
-clean: clean-pkg
-	-rm -rf deploy
-	-rm *.tgz
-	-rm plist
-	-rm deplist
