Update rc.d path

--- a/rel/pkgng/Makefile
+++ b/rel/pkgng/Makefile
@@ -12,5 +12,5 @@ prepare:
 	mkdir -p $(STAGE_DIR)/$(INSTALL_DIR)
 	cp -r ../../_build/prod/rel/$(COMPONENT_INTERNAL) $(STAGE_DIR)/$(INSTALL_DIR)
 	rm -rf $(STAGE_DIR)/$(INSTALL_DIR)/lib/*/c_src
-	mkdir -p $(STAGE_DIR)/etc/rc.d
-	cp ../freebsd/zlogin $(STAGE_DIR)/etc/rc.d/
+	mkdir -p $(STAGE_DIR)/usr/local/etc/rc.d/
+	cp ../freebsd/zlogin $(STAGE_DIR)/usr/local/etc/rc.d/
