Include script for zlogin executable

--- a/rel/pkgng/Makefile
+++ b/rel/pkgng/Makefile
@@ -5,12 +5,11 @@ REBARPROFILE ?= default
 include ../../config.mk
 include ../../_build/${REBARPROFILE}/lib/fifo_utils/priv/pkgng.mk
 
-.PHONY: prepare 
+.PHONY: prepare
 
 prepare:
-	-rm -r $(STAGE_DIR)
+	-rm -r $(STAGE_DIR)/$(INSTALL_DIR)/$(COMPONENT_INTERNAL)
+	-rm  $(STAGE_DIR)/+*
+	-rm  $(STAGE_DIR)/plist
 	mkdir -p $(STAGE_DIR)/$(INSTALL_DIR)
-	cp -r ../../_build/${REBARPROFILE}/rel/$(COMPONENT_INTERNAL) $(STAGE_DIR)/$(INSTALL_DIR)
-	rm -rf $(STAGE_DIR)/$(INSTALL_DIR)/lib/*/c_src
-	mkdir -p $(STAGE_DIR)/usr/local/etc/rc.d/
-	cp ../freebsd/zlogin $(STAGE_DIR)/usr/local/etc/rc.d/
+	cp -r ../../_build/${REBARPROFILE}/rel/$(COMPONENT_INTERNAL) $(STAGE_DIR)/$(INSTALL_DIR)/$(COMPONENT_INTERNAL)
