--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,13 +18,12 @@ stages:
 ################################################################################
 trigger_test:
   <<: *is_triggered
+  image erlang:19
   stage: test
   script:
     - ./rebar3 upgrade $DOWNSTREAM_LIBRARY 
     - ./rebar3 dialyzer
     - ./rebar3 xref
-  tags:
-    - smartos
 
 ################################################################################
 ## package stage
